added refresh button & updated icon

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,11 @@
   <mat-toolbar color="primary">
     <span>Chess Clock</span>
     <span class="example-spacer"></span>
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon"
+    <button mat-icon-button class="example-icon"
+            (click)="restart()">
+      <mat-icon>refresh</mat-icon>
+    </button>
+    <button mat-icon-button class="example-icon"
             (click)="openSettings()">
       <mat-icon>settings</mat-icon>
     </button>
