--- a/src/app/game-over-dialog/game-over-dialog.component.html
+++ b/src/app/game-over-dialog/game-over-dialog.component.html
@@ -1,4 +1,5 @@
-<h4>{{data}} wins!</h4>
+<div mat-dialog-title>{{data}} wins!</div>
 <div mat-dialog-actions>
-  <button mat-button (click)="onNoClick()">New Game</button>
+  <button mat-button (click)="onNoClick()">Play again</button>
+  <button mat-button (click)="onNoClick()">Ok Brah</button>
 </div>
