--- a/src/app/settings-dialog/settings-dialog.component.html
+++ b/src/app/settings-dialog/settings-dialog.component.html
@@ -28,6 +28,9 @@
       <mat-label>Increment (in s)</mat-label>
       <input matInput formControlName="increment2">
     </mat-form-field>
+    <div class="hint-container">
+      <mat-hint>Hint: When playing on desktop press space to change player!</mat-hint>
+    </div>
   </div>
   <div mat-dialog-actions>
     <button mat-button type="submit">Ok</button>
