--- a/src/app/settings-dialog/settings-dialog.component.scss
+++ b/src/app/settings-dialog/settings-dialog.component.scss
@@ -1,3 +1,10 @@
 mat-form-field {
   margin-right: 5px;
 }
+
+
+@media only screen and (max-width: 768px) {
+  .hint-container {
+    display: none;
+  }
+}
